basic addition works for both verEx() + then("help")

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,11 @@
+S3method("+",vRbalExpression)
 export(any)
 export(anyOf)
 export(anything)
 export(anythingBut)
 export(br)
 export(endofline)
+export(is.verEx)
 export(linebreak)
 export(maybe)
 export(or)
@@ -13,5 +15,6 @@ export(somethingBut)
 export(startofline)
 export(tab)
 export(then)
+export(verEx)
 export(verbalExpression)
 export(word)
