updated everything to use the verEx constructor and the +.vRbalExpression method to add two objects together. All tests pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(anything)
 export(anythingBut)
 export(br)
 export(endofline)
+export(find)
 export(is.verEx)
 export(linebreak)
 export(maybe)
